--- a/src/pages/home/ConsultantArea/ConsultanArea.css
+++ b/src/pages/home/ConsultantArea/ConsultanArea.css
@@ -2,5 +2,6 @@
     background-image: url(../../../assets/Rectangle\ 46.png);
     background-repeat: no-repeat;
     background-position: 0% 100%;
+    background-blend-mode: darken;
     background-size: contain
 }
